# fastipc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/fastipc/: i_channel.h  shared_memory.h
src/: CMakeLists.txt
src/core/: shared_memory.cc  simple_channel.cc  simple_channel.h
tests/: CMakeLists.txt
tests/core/: shared_memory_unittest.cc  simple_channel_unittest.cc
